--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Simple HTML Page</title>
 </head>
 <body>
-    <h1>Welcome to My Simple HTML Page</h1>
+    <h1>Welcome to My Simple HTML website</h1>
 </body>
 </html>
